# wb_harmonize

./: README.md  pyproject.toml  setup.cfg  setup.py
src/data/Freesurfer7.1.1/fsaverage/surf/: lh.aparc.label.gii  rh.aparc.label.gii
src/example/: resample_indiv_FS_metric_to_group.ipynb
src/example/example_data/bert/label/: lh.BA1_exvivo.label  lh.BA1_exvivo.thresh.label  lh.BA2_exvivo.label  lh.BA2_exvivo.thresh.label  lh.BA3a_exvivo.label  lh.BA3a_exvivo.thresh.label  lh.BA3b_exvivo.label  lh.BA3b_exvivo.thresh.label  lh.BA44_exvivo.label  lh.BA44_exvivo.thresh.label  lh.BA45_exvivo.label  lh.BA45_exvivo.thresh.label  lh.BA4a_exvivo.label  lh.BA4a_exvivo.thresh.label  lh.BA4p_exvivo.label  lh.BA4p_exvivo.thresh.label  lh.BA6_exvivo.label  lh.BA6_exvivo.thresh.label  lh.BA_exvivo.annot  lh.BA_exvivo.thresh.annot  lh.FG1.mpm.vpnl.label  lh.FG2.mpm.vpnl.label  lh.FG3.mpm.vpnl.label  lh.FG4.mpm.vpnl.label  lh.MT_exvivo.label  lh.MT_exvivo.thresh.label  lh.V1_exvivo.label  lh.V1_exvivo.thresh.label  lh.V2_exvivo.label  lh.V2_exvivo.thresh.label  lh.aparc.DKTatlas.annot  lh.aparc.a2009s.annot  lh.aparc.annot  lh.entorhinal_exvivo.label  lh.entorhinal_exvivo.thresh.label  lh.hOc1.mpm.vpnl.label  lh.hOc2.mpm.vpnl.label  lh.hOc3v.mpm.vpnl.label  (+46 more)
src/example/output/bert/: lh.fslr32k.area.func.gii  lh.fslr32k.thickness.func.gii  lh.fslr32k.volume.func.gii  rh.fslr32k.area.func.gii  rh.fslr32k.thickness.func.gii  rh.fslr32k.volume.func.gii
src/wb_harmonize/: utilities.py  wb_harmonize.py
src/wb_harmonize_btrx_kanderson.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+136 files in other folders)
