[metadata]
name = wb_harmonize-btrx-kanderson
version = 0.0.1
author = Kevin Anderson
author_email = kevin.anderson@neumoratx.com
description = A package to make surface conversions easy and fast.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/btrx-kanderson/wb_harmonize
project_urls =
    Bug Tracker = https://github.com/btrx-kanderson/wb_harmonize/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src